--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,8 @@ services:
   
   db:
     image: mariadb
+    ports:
+      - 3306:3306
     volumes:
       - mariadbfiles:/var/lib/mysql
     environment:
